# GLBase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: sandbox.cpp
include/GLBase/: GLBase.hpp
include/GLBase/core/: FrameBuffer.hpp  GLBuffer.hpp  IndexBuffer.hpp  Mesh.hpp  RNG.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  glErrors.h
include/GLBase/math/: HSV.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
src/: FrameBuffer.cpp  GLBase.cpp  IndexBuffer.cpp  OBJ.cpp  Renderer.cpp  Shader.cpp  Vertex.cpp
src/math/: Matrix.cpp  Quaternion.cpp  Vector.cpp  triangulate.cpp
tests/: math.cpp  vertexlayout.cpp
